--- a/stanivlasky.html
+++ b/stanivlasky.html
@@ -25,7 +25,7 @@
   <div class="leftcolumn">
     <div class="card">
       <h2>Stanivlaski's System</h2>
-      <div class="fakeimg" style="height:200px;"><img src="Stanivlaski.gif" alt="Where are we/What is this place? gif" height="109%"></div>
+      <div class="fakeimg" style="height:200px;"><img src="stanivlaski.gif" alt="Where are we/What is this place? gif" height="109%"></div>
       <h5 style="color: gray"><a href="https://78.media.tumblr.com/e9cba7eca35e70a3b8e7d59521442c36/tumblr_p5prriN5k01tnjtx4o3_400.gif" style="text-decoration: none; color: gray">Sebastian Stan // Tumblr.com</a></h5>
       <p>Stanislavski’s principles of directing and his collective theories on acting were very influential in the late nineteenth century and are still used by actors and directors today. The Stanislavski or system is a set of techniques used by actors to portray emotions on stage by putting themselves in the place of the character.</p>
         <h3 style="text-decoration: underline">How can I Utilize Method Acting?</h3>
@@ -39,7 +39,7 @@
             <li>How Will I Get It?</li><br>
             <li>What Do I Need To Overcome?</li><br>
         </ol>
-        <img src="Stanislavski.jpg" height="250em">
+        <img src="stanislavski.jpg" height="250em">
         To answer these questions, you may:
         <ol>
             <li>Read the script carefully to get good understanding of the characters motivations, needs and desires; by doing this you will get a better identify of the role you are playing. </li><br>
