--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <div class="footer">
-  <h5>Jaden<br>Hancock High School<br>Exploring Computer Science Pilot Course, 3rd Block<br>Last Updated: May 2018<br><a href="index.html">Home</a></h5>
+  <h5>Jaden<br>Hancock High School<br>Exploring Computer Science Pilot Course, 3rd Block<br>Last Updated: May 2018<br><a href="index.html">https://jaden-sheffield17.github.io/acting/index.html</a></h5>
 </div>
     
     </body>
